# cookiecutter-django

./: README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  django-issue-checker.yml  update-changelog.yml  update-contributors.yml
docs/: developing-locally.rst  linters.rst  settings.rst
scripts/: update_changelog.py
tests/: test_cookiecutter_generation.py  test_docker.sh
{{cookiecutter.project_slug}}/: .drone.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile  entrypoint
{{cookiecutter.project_slug}}/config/: urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/requirements/: local.txt  production.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: adapters.py  apps.py  managers.py  models.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_managers.py  test_urls.py  test_views.py
