# ==== pytest ====
[tool.pytest.ini_options]
addopts = "-v --tb=short"
norecursedirs = [
    ".tox",
    ".git",
    "*/migrations/*",
    "*/static/*",
    "docs",
    "venv",
    "*/{{cookiecutter.project_slug}}/*",
]


# ==== black ====
[tool.black]
line-length = 119
target-version = ['py312']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "tests",
    "scripts",
    "hooks",
]


# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002,T028"
ignore_blocks = "raw"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "jinja"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[project]
requires-python = ">=3.12"
name = "cookiecutter-django"
version = "2024.09.02"
description = "A Cookiecutter template for creating production-ready Django projects quickly."
readme = "README.md"
license = "BSD"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
keywords = ["cookiecutter", "Python", "projects", "project templates"," django", "skeleton", "scaffolding", "project directory", "setup.py"]
urls = { Repository = "https://github.com/cookiecutter/cookiecutter-django" }
authors = [{ name = "Daniel Roy Greenfeld", email = "pydanny@gmail.com" }]
dependencies = [
    "cookiecutter==2.6.0",
    "sh==2.0.7; sys_platform != 'win23'",
    "binaryornot==0.4.4",
    # Code quality
    # ------------------------------------------------------------------------------
    "ruff==0.6.3",
    "django-upgrade==1.20.0",
    "djlint==1.35.2",
    "pre-commit==3.8.0",
    # Testing
    # ------------------------------------------------------------------------------
    "tox==4.18.0",
    "pytest==8.3.2",
    "pytest-xdist==3.6.1",
    "pytest-cookies==0.7.0",
    "pytest-instafail==0.5.0",
    "pyyaml==6.0.2",
    # Scripting
    # ------------------------------------------------------------------------------
    "PyGithub==2.4.0",
    "gitpython==3.1.43",
    "jinja2==3.1.4",
    "requests==2.32.3",
]
