[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-slugify = "^8.0.2"
pillow = "^10.2.0"
argon2-cffi = "^23.1.0"
whitenoise = "^6.6.0"
redis = "^5.0.1"
hiredis = "^2.3.2"
celery = "^5.3.6"
django-celery-beat = "^2.5.0"
flower = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
django-environ = "^0.11.2"
django-model-utils = "^4.3.1"
django-allauth = {version = "^0.60.1", extras = ["mfa"]}
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
django-redis = "^5.4.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.1"
django-webpack-loader = "^3.0.1"
gunicorn = "^21.2.0"
psycopg = {extras = ["c"], version = "^3.1.17"}
sentry-sdk = "^1.39.2"
django = "^4.2.9"
django-storages = {version = "^1.14.2", extras = ["s3"]}
django-anymail = {version = "10.2", extras = ["mailgun"]}
django-htmx = "^1.17.2"
django-template-partials = "^23.4"

[tool.poetry.group.dev.dependencies]
werkzeug = {extras = ["watchdog"], version = "^3.0.1"}
ipdb = "^0.13.13"
psycopg = {extras = ["c"], version = "^3.1.17"}
watchfiles = "^0.21.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.7"}
pytest = "^7.4.4"
pytest-sugar = "^0.9.7"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
coverage = "^7.4.0"
djlint = "^1.34.1"
pre-commit = "^3.6.0"
factory-boy = "^3.3.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
django-coverage-plugin = "^3.1.0"
pytest-django = "^4.7.0"
mypy = "^1.7"
# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]
{%- if cookiecutter.frontend_pipeline == 'Gulp' %}
norecursedirs = ["node_modules"]
{%- endif %}

# ==== Coverage ====
[tool.coverage.run]
include = ["{{cookiecutter.project_slug}}/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
{%- if cookiecutter.use_drf == "y" %}
    "mypy_drf_plugin.main",
{%- endif %}
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*"
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF"
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102" # sometimes it's better to nest
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
